# MA_2026

./: readme.md
vision_v1.0/calibration/: capture.cpp
vision_v1.0/configs/: ascento.yaml  calibration.yaml  demo.yaml  main.yaml
vision_v1.0/io/: CMakeLists.txt  command.hpp
vision_v1.0/io/gimbal/: gimbal.cpp  gimbal.hpp
vision_v1.0/io/interface/: hseven.cpp  hseven.hpp
vision_v1.0/src/: auto_aim_debug_mpc.cpp  auto_buff_debug.cpp  main.cpp  main_debug.cpp
vision_v1.0/tasks/auto_aim/: target.cpp  tracker.hpp
vision_v1.0/tests/: auto_buff_test.cpp  camera_detect_test.cpp  detector_video_test.cpp  gimbal_response_test.cpp  gimbal_test.cpp  handeye_test.cpp  serial_test.cpp  usbcamera_detect_test.cpp  usbcamera_test.cpp
vision_v1.0/tools/: crc.cpp
vision_v1.1/: CMakeLists.txt  readme.md
vision_v1.1/calibration/: capture.cpp
vision_v1.1/configs/: ascento.yaml  calibration.yaml  main.yaml
vision_v1.1/io/: CMakeLists.txt
vision_v1.1/io/gimbal/: gimbal.cpp  gimbal.hpp
vision_v1.1/io/interface/: cboard.cpp  cboard.hpp  hseven.cpp  hseven.hpp
vision_v1.1/src/: auto_buff_debug.cpp  main.cpp  main_debug.cpp
vision_v1.1/tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  target.hpp  tracker.cpp
vision_v1.1/tests/: auto_buff_test.cpp  camera_detect_test.cpp  camera_thread_test.cpp  detector_video_test.cpp  gimbal_response_test.cpp  handeye_test.cpp  multi_usbcamera_test.cpp  serial_test.cpp  usbcamera_detect_test.cpp  usbcamera_test.cpp
